Added Dockerfile to create Docker image. Added Tags to Swagger to group endpoints. Modified app to use port 6220  and Swagger to respond on swiftcloud.ckret.net. Updated modules. Added endpoint swagger descriptions. Refactoring of endpoints. Added README.md
